Fixed contact form on smaller devices

--- a/styles.css
+++ b/styles.css
@@ -615,14 +615,10 @@ label[for="comments"] {
         margin-top: 20%;
     }
 
-    fieldset {
-        /* margin-right: 10%; */
-        min-width: 300px;
-        padding: 10px 20px;
-    }
-
     form {
-        padding: 2% 20%;
+        /* margin: auto; */
+        padding: 2% 10%;
+        max-width: 600px;
     }
 
     label {
